# lumina

./: .gitignore  QUICKSTART.md  README.md  build.sh  package.sh
electron/: .env.tmp  .gitignore  jest.config.ts  package-lock.json  package.json  tsconfig.json
electron/assets/: lumina.icns
electron/renderer/: index.html  styles.css
electron/src/: main.ts  util.ts
electron/src/__tests__/: main.test.ts
python/: .gitignore  pyproject.toml  requirements.txt
python/mactheme/: __init__.py  cli.py  core.py
python/mactheme/tests/: test_core.py
