[tool.poetry]
name = "mactheme"
version = "1.0.0"
description = "A Python library for managing macOS appearance modes"
authors = ["Lumina Dev <dev@lumina.app>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.15"
click = "^8.0"
# Add any other dependencies here...

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"
# If you use pytest or other test tools, add here:
# pytest = "^8.0.0"

[tool.poetry.scripts]
theme-toggle = "mactheme.cli:cli"
